<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Algorithm Problems</string>

    <string name="title_activity_main">Algorithm Problems</string>
    <string name="title_activity_login">Login</string>

    <string name="navigation_bar_default_title">Algorithm Problems</string>
    <string name="navigation_bar_title_problem_list">Problems</string>
    <string name="navigation_bar_title_problem_detail">Problem Detail</string>
    <string name="navigation_bar_title_my_answer">My Submission</string>

    <string name="navigation_bar_action_button_text_submit">Submit</string>

    <string name="tab_bar_button_problem_archive_title">Problems</string>
    <string name="tab_bar_button_my_answer_title">My Submission</string>

    <string name="network_operation_timeout"><u>Connection timeout. Click here to reload.</u></string>
    <string name="network_operation_timeout_pull_down">Connection timeout. Please retry.</string>
    <string name="press_back_twice_to_exit">Press BACK again if you want to exit.</string>

    <string name="problem_default_title">Untitled Problem</string>
    <string name="problem_default_id">#</string>
    <string name="problem_state_untried">NOT TESTED</string>
    <string name="problem_state_accept">ACCEPTED</string>
    <string name="problem_state_wrong">WRONG</string>
    <string name="problem_default_statistics">NO STATISTIC DATA</string>
    <string name="problem_statistics_text_format">Ratio: %1$.1f%% (%2$d / %3$d)</string>
    <string name="problem_description_label">Problem Description</string>
    <string name="problem_input_label">Input</string>
    <string name="problem_output_label">Output</string>
    <string name="problem_sample_input_label">Sample Input</string>
    <string name="problem_sample_output_label">Sample Output</string>
    <string name="problem_code_area_label">Code Area</string>
    <string name="problem_submit_failed_login_first">Please first login.</string>
    <string name="problem_submit_failed_empty_code_body">:-) Input your code first&#8230;</string>
    <string name="problem_submit_working">Submitting&#8230;</string>
    <string name="problem_submit_successful">Submit successful. Please check \'My Submission\' for results.</string>
    <string name="problem_submit_failed_unknown_reason">Submit failed for unknown reason :-(</string>

    <string name="login_via_hdu_account_hint">You can use your HDU OJ account to login. You can register one at http://acm.hdu.edu.cn if you do not have.</string>
    <string name="login_username_placeholder">Username</string>
    <string name="login_password_placeholder">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_username_cannot_be_empty">Username cannot be empty.</string>
    <string name="login_password_cannot_be_empty">Password cannot be empty.</string>
    <string name="login_failed">Login failed. Invalid username or password, or network error.</string>

    <string name="answer_dashboard_login_button_text">Please Login</string>
    <string name="answer_dashboard_temp_hint">This page have not been finished because I don\'t have much time. So I just give you this simple web view to check submissions.</string>
    <string name="answer_dashboard_temp_refresh_button">Refresh</string>

</resources>
