<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/problem_list_cell_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="6dp"
            android:scaleType="fitXY"
            android:src="@drawable/problem_card_background" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:scaleType="fitXY"
            android:src="@drawable/problem_id_decoration" />

        <TextView
            android:id="@+id/problemIdTextView"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/problem_default_id"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="italic"
            android:typeface="sans" />

        <TextView
            android:id="@+id/problemTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="14dp"
            android:layout_toLeftOf="@+id/problemStateLayout"
            android:singleLine="true"
            android:text="@string/problem_default_title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/problemStatisticsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="37dp"
            android:layout_toLeftOf="@+id/problemStateLayout"
            android:singleLine="true"
            android:text="@string/problem_default_statistics"
            android:textColor="#ffa8a8a8"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/problemStateLayout"
            android:layout_width="@dimen/problem_state_layout_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <ImageView
                android:id="@+id/problemStateIconView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/problem_state_untried_icon" />

            <TextView
                android:id="@+id/problemStateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/problem_state_untried"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>