<com.teamabcd.algorithmproblems.CustomView.SlidingFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pane_background"
    tools:context="com.teamabcd.algorithmproblems.ProblemArchiveTab.ProblemDetailFragment">

    <RelativeLayout
        android:id="@+id/tempAnswerDashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/answerDashboardTempHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:text="@string/answer_dashboard_temp_hint" />

            <Button
                android:id="@+id/answerDashboardTempRefreshButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/answer_dashboard_temp_refresh_button" />
        </LinearLayout>

        <WebView
            android:id="@+id/answerDashboardTempWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/answerDashboardTempHint" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/answerDashboardLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/login_button_background"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/answer_dashboard_login_button_text"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
</com.teamabcd.algorithmproblems.CustomView.SlidingFrameLayout>