<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pane_background"
    tools:context="com.teamabcd.algorithmproblems.ProblemDetailFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/problem_detail_label_height"
                android:gravity="center_vertical"
                android:text="@string/problem_description_label"
                android:textColor="@color/problem_label_text"
                android:drawableLeft="@drawable/problem_description_label_icon"
                android:drawablePadding="8dp"/>

            <TextView
                android:id="@+id/problemDetailDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/problem_detail_text_margin_top"
                android:layout_marginBottom="@dimen/problem_detail_text_margin_bottom"
                android:layout_marginLeft="@dimen/problem_detail_text_margin_left"
                android:layout_marginRight="@dimen/problem_detail_text_margin_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/problem_detail_label_height"
                android:gravity="center_vertical"
                android:text="@string/problem_input_label"
                android:textColor="@color/problem_label_text" />

            <TextView
                android:id="@+id/problemDetailInputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/problem_detail_text_margin_top"
                android:layout_marginBottom="@dimen/problem_detail_text_margin_bottom"
                android:layout_marginLeft="@dimen/problem_detail_text_margin_left"
                android:layout_marginRight="@dimen/problem_detail_text_margin_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/problem_detail_label_height"
                android:gravity="center_vertical"
                android:text="@string/problem_output_label"
                android:textColor="@color/problem_label_text" />

            <TextView
                android:id="@+id/problemDetailOutputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/problem_detail_text_margin_top"
                android:layout_marginBottom="@dimen/problem_detail_text_margin_bottom"
                android:layout_marginLeft="@dimen/problem_detail_text_margin_left"
                android:layout_marginRight="@dimen/problem_detail_text_margin_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/problem_detail_label_height"
                android:gravity="center_vertical"
                android:text="@string/problem_sample_input_label"
                android:textColor="@color/problem_label_text" />

            <TextView
                android:id="@+id/problemDetailSampleInputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/problem_detail_text_margin_top"
                android:layout_marginBottom="@dimen/problem_detail_text_margin_bottom"
                android:layout_marginLeft="@dimen/problem_detail_text_margin_left"
                android:layout_marginRight="@dimen/problem_detail_text_margin_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/problem_detail_label_height"
                android:gravity="center_vertical"
                android:text="@string/problem_sample_output_label"
                android:textColor="@color/problem_label_text" />

            <TextView
                android:id="@+id/problemDetailSampleOutputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/problem_detail_text_margin_top"
                android:layout_marginBottom="@dimen/problem_detail_text_margin_bottom"
                android:layout_marginLeft="@dimen/problem_detail_text_margin_left"
                android:layout_marginRight="@dimen/problem_detail_text_margin_right" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
