<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pane_background"
    android:orientation="vertical"
    tools:context="com.teamabcd.algorithmproblems.Activity.MainActivity">

    <!-- Navigation Bar -->
    <RelativeLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:background="#31C0ED">

        <ImageButton
            android:id="@+id/navigationBarBackButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:onClick="onBackButtonClicked"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/back_button_icon" />

        <TextView
            android:id="@+id/navigationBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/navigation_bar_default_title"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/navigationBarActionButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </RelativeLayout>

    <!-- Tab Frame Container -->
    <FrameLayout
        android:id="@+id/tabFrameContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tabBar"
        android:layout_below="@+id/navigationBar" />

    <!-- Tab Bar -->
    <LinearLayout
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tab_bar_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:id="@+id/tabBarProblemArchiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="35dp"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/tab_bar_button_problem_archive"
            android:onClick="onProblemArchiveTabButtonClicked"
            android:paddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/tab_bar_button_problem_archive_title"
            android:textColor="@color/tab_bar_button_text_normal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tabBarMyAnswersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/tab_bar_button_my_answers"
            android:onClick="onMyAnswerTabButtonClicked"
            android:paddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/tab_bar_button_my_answer_title"
            android:textColor="@color/tab_bar_button_text_normal"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>

